--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -145,10 +145,11 @@ footer>p {
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 a:visited {
-    color: black;
+    color: white;
     text-decoration: none;
     text-transform: lowercase;
     font-weight: 900;
@@ -156,7 +157,7 @@ a:visited {
 
 footer {
     width: 100%;
-    background-color: cornflowerblue;
+    background-color: #525252;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
